k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummy-crm-rust-app-service
  namespace: dummy-crm-namespace
spec:
  ports:
    - name: http-port
      port: 8080
      targetPort: 8080 # Debe coincidir con el puerto expuesto por el contenedor
      protocol: TCP
  selector:
    app: dummy-crm-rust-app # Asegúrate de que coincida con las etiquetas del pod
